update teaching section

--- a/index.html
+++ b/index.html
@@ -269,43 +269,48 @@
       			<button type="button" class="collapsible"> <h4>Machine Learning via a Modern Optimization Lens (MIT 15.095)</h4> 
         				<p> Teaching Assistant - Fall 2022</p></button>
 				<div class="content">
-				  <p> Graduate-level (PhD, MSc, MBAn) course on ML using mixed-integer, robust, and convex optimization </p>
-				  <p> <b>Rating: </b> 6.9/7.0  </p>
+				  <p> --Graduate level (PhD, MSc, MBAn) course on ML using mixed-integer, robust, and convex optimization. </p>
+				  <p> --Led recitations and weekly office hours, developed and graded assignments, supervised final projects. </p>
+				  <p> --Class Size: 105;  <b>Student Evaluation Score: 6.9/7.0 </b>  </p>
 				</div>
 
 				<button type="button" class="collapsible"> <h4>Robust Modeling, Optimization, and Computation (MIT 15.094) </h4> 
 				        <p> Teaching Assistant - Spring 2022</p></button>
 				<div class="content">
-				  <p> Graduate-level (PhD, MSc, MBAn) course on theory, modeling, algorithms, and applications of robust optimization </p>
-				  <p> <b>Rating: </b> 6.7/7.0  </p>
+				  <p> --Graduate level (PhD, MSc, MBAn) course on theory, modeling, algorithms, and applications of robust optimization. </p>
+				  <p> --Led recitations and weekly office hours, developed and graded assignments, supervised final projects. </p>
+				  <p> --Class Size: 21;  <b>Student Evaluation Score: 6.7/7.0 </b>  </p>
 				</div>
 
 				<button type="button" class="collapsible"> <h4>Analytics Capstone (MIT 15.089) </h4> 
 				        <p> Teaching Assistant - Summer 2022</p></button>
 				<div class="content">
-				  <p> MBAn course on using analytical tools to solve key business challenges </p>
-				  <p> <b>Rating: </b> NA  </p>
+				  <p> --Master of Business Analytics course on using analytical tools to solve key business challenges. </p>
+				  <p> --Evaluated project presentations, provided feedback and graded final project reports.</p>
+				  <p> --Class Size: 78;  <b>Student Evaluation Score: NA </b>  </p>
 				</div>
 
 				<button type="button" class="collapsible"> <h4>Analytics Software Tools (MIT 15.003) </h4> 
 				        <p> Instructor - Fall 2023, Fall 2020, Fall 2021</p></button>
 				<div class="content">
-				  <p> MBAn course on learning software tools such as R, python, Julia and Git </p>
-				  <p> <b>Rating: </b> 7.0/7.0  </p>
+				  <p> --Master of Business Analytics course on software tools such as R, Python, Julia and Git.</p>
+				  <p> --Designed curriculum and created software workshops on data wrangling, visualization, machine learning, deep learning, version control, optimization.</p>
+				  <p> --Average Class Size: 80;  <b>Student Evaluation Score: 7.0/7.0 </b>  </p>
 				</div>
 
 				<button type="button" class="collapsible"> <h4>The Analytics Edge (MIT 15.727)  </h4> 
 				        <p> Teaching Assistant - Spring 2021</p></button>
 				<div class="content">
-				  <p> Executive MBA course on quantitative methods including data-mining, dynamic optimization, and simulation </p>
-				  <p> <b>Rating: </b> 7.0/7.0  </p>
+				  <p> --Executive Master of Business Analytics course on quantitative methods including data-mining, dynamic optimization, and simulation.</p>
+				  <p> --Led recitations and weekly office hours, developed and graded assignments, supervised final projects.</p>
+				  <p> --Class Size: 46;  <b>Student Evaluation Score: 7.0/7.0 </b>  </p>
 				</div>
 
 				<button type="button" class="collapsible"> <h4>The Analytics Edge (MITx 15.071x) </h4> 
 				        <p> Online Teaching Assistant - Fall 2020</p></button>
 				<div class="content">
 				  <p> Online course on quantitative methods including data-mining, dynamic optimization, and simulation </p>
-				  <p> <b>Rating: </b> NA  </p>
+				  <p> --Class Size: 844;  <b>Student Evaluation Score: NA </b>  </p>
 				</div>
 			</div>
 		</div>
