--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="google-site-verification" content="8dJcfI9ECeoEpNK_R9KdPfpiSnANlgPnUFS7JVZMt5c" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Kimberly Villalobos Carballo - MIT | Personal Wesbite </title>
+<title>Kimberly Villalobos Carballo - MIT | Personal Website </title>
 <meta name="description" content="Kimberly Villalobos Carballo MIT Operations Research Center Personal Website">
 <meta name="author" content="Kimberly Villalobos Carballo">
 
