update papers and CV

--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
       			</div>
       			<div class="col-md-10">
 		  			<ul>
+		  				<li>
+				            <a href="https://arxiv.org/abs/2110.15829">Holistic Deep Learning</a>
+				            <p style="font-size:14px">Dimitris Bertsimas, Kimberly Villalobos Carballo, Léonard Boussioux, Michael Lingzhi Li, Alex Paskov, Ivan Paskov</p>
+				            <p style="font-size:14px">Machine Learning (MACH), 2023</p>
+			        	</li>
+
 				        <li>
 				            <a href="https://www.nature.com/articles/s41746-022-00689-4">Integrated multimodal artificial intelligence framework for healthcare applications</a>
 				            <p style="font-size:14px">Luis R Soenksen, Yu Ma, Cynthia Zeng, Leonard Boussioux, Kimberly Villalobos Carballo, Liangyuan Na, Holly M Wiberg, Michael L Li, Ignacio Fuentes, Dimitris Bertsimas</p>
@@ -132,38 +138,21 @@
   	    			</ul>
   	    		</div>
       		</div>
-      	</div>
 
-        <div class="inner_wrapper Research Research-sub-container-white">
-         	<div class="container">
-         		<div class="col-md-1">
-      				<h4><i>Papers in Revision</i></h4> 
-      			</div>
-      			<div class="col-md-10">
-			        <ul>
-			         	<li>
-				            <a href="https://arxiv.org/abs/2112.09279">Robust Upper Bounds for Adversarial Training</a>
-				            <p style="font-size:14px">Dimitris Bertsimas, Xavier Boix, Kimberly Villalobos Carballo, Dick den Hertog</p>
-				            <p style="font-size:14px">Submitted to Journal of Machine Learning Research (JMLR), 2023</p>
-			        	</li>
+      		<hr/>
 
-			        	<li>
-				            <a href="https://arxiv.org/abs/2110.15829">Holistic Deep Learning</a>
-				            <p style="font-size:14px">Dimitris Bertsimas, Kimberly Villalobos Carballo, Léonard Boussioux, Michael Lingzhi Li, Alex Paskov, Ivan Paskov</p>
-				            <p style="font-size:14px">Submitted to Machine Learning (MACH), 2023</p>
-			        	</li>
-			      	</ul>
-				</div>
-			</div>
-		</div>
-
-     	<div class="inner_wrapper Research Research-sub-container-gray">
         	<div class="container">
         		<div class="col-md-1">
-      				<h4><i>Papers Submitted</i></h4> 
+      				<h4><i>Papers Under Review</i></h4> 
       			</div>
       			<div class="col-md-10">
 			        <ul>
+			        	<li>
+				            <a href="https://arxiv.org/abs/2112.09279">Robust Upper Bounds for Adversarial Training</a>
+				            <p style="font-size:14px">Dimitris Bertsimas, Xavier Boix, Kimberly Villalobos Carballo, Dick den Hertog</p>
+				            <p style="font-size:14px">Submitted to Operations Research, 2023</p>
+			        	</li>
+
 			         	<li>
 				            <a href="https://arxiv.org/abs/2303.06515">Multistage Stochastic Optimization via Kernels</a>
 				            <p style="font-size:14px">Dimitris Bertsimas, Kimberly Villalobos Carballo</p>
