--- a/index.html
+++ b/index.html
@@ -219,22 +219,22 @@
       		</div>
       		<div class="col-md-5" style="margin-bottom:0px">
       			<ul>
-			        <li> <i class='fas fa-award'>   </i>    Winner, INFORMS’ William Pierskalla Best Paper Award 2020 </li>
-			        <li> <i class='fas fa-award'>   </i> Finalist, INFORMS Doing Good with Good OR Student Competition 2023 </li>
-			        <li> <i class='fas fa-award'>   </i> Winner, MIT-Pillar AI Collective Prize 2023</li>
-			        <li> <i class='fas fa-award'>   </i> Winner, MIT Cognex Poster Competition 2022</li>
-			        <li> <i class='fas fa-award'>   </i> Tau Beta Pi Honor Society 2018</li>
-			        <li> <i class='fas fa-award'>   </i> Eta Kappa Nu Honor Society 2018</li>
-			        <li> <i class='fas fa-award'>   </i> Young Talent Costa Rican Award 2014</li> 
+			        <li> <i>   </i>    Winner, INFORMS’ William Pierskalla Best Paper Award 2020 </li>
+			        <li> <i>   </i> Finalist, INFORMS Doing Good with Good OR Student Competition 2023 </li>
+			        <li> <i>   </i> Winner, MIT-Pillar AI Collective Prize 2023</li>
+			        <li> <i>   </i> Winner, MIT Cognex Poster Competition 2022</li>
+			        <li> <i>   </i> Tau Beta Pi Honor Society 2018</li>
+			        <li> <i>   </i> Eta Kappa Nu Honor Society 2018</li>
+			        <li> <i>   </i> Young Talent Costa Rican Award 2014</li> 
 			    </ul>
 			</div>
 			<div class="col-md-4" >
 			    <ul>
-			        <li> <i class='fas fa-award'>   </i> Bronze Medal, 55th International Mathematical Olympiad 2014</li>
-			        <li> <i class='fas fa-award'>   </i> Honorable Mention, 54th International Mathematical Olympiad 2013</li>
-			        <li> <i class='fas fa-award'>   </i> Bronze medal, Asian Pacific Mathematics Olympiad 2013</li>
-			        <li> <i class='fas fa-award'>   </i> Bronze medal, Iberoamerican Mathematical Olympiad 2013</li>
-			        <li> <i class='fas fa-award'>   </i> Bronze medal, Iberoamerican Mathematical Olympiad 2012</li>
+			        <li> <i>   </i> Bronze Medal, 55th International Mathematical Olympiad 2014</li>
+			        <li> <i>   </i> Honorable Mention, 54th International Mathematical Olympiad 2013</li>
+			        <li> <i>   </i> Bronze medal, Asian Pacific Mathematics Olympiad 2013</li>
+			        <li> <i>   </i> Bronze medal, Iberoamerican Mathematical Olympiad 2013</li>
+			        <li> <i>   </i> Bronze medal, Iberoamerican Mathematical Olympiad 2012</li>
 			    </ul>
 			</div>
   		</div>
