--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
  	<div class="inner_wrapper Collaborations Collaborations-container fadeInLeft animated wow">
     	<div class="container">
       		<h2><i>Collaborations</i></h2>
-      		<h4> During my PhD I have been lucky to work in partnership with several medical institutions to improve 
+      		<h4> I have been lucky to work in partnership with several medical institutions to improve 
       			their healthcare operations.</h4>
 	      	<div class="collab_section">
 	        	<div class="col-sm-4"> <img class="img-responsive" src="hartford.png"> 
@@ -237,10 +237,6 @@
 			        <li> <i>   </i> Bronze medal, Iberoamerican Mathematical Olympiad 2012</li>
 			    </ul>
 			</div>
-  		</div>
-
-  		<div class="container">
-			<p style='text-align: center;font-size: 16px'> I also had the great honor of being selected by my students as the guest speaker for the 2023 MIT MBAn class. You can watch my speech on the power of failure and hardship <a href="https://drive.google.com/file/d/1XS39hCcEjZeGRy4pjpJAr9jMBeEYU2NC/view?usp=sharing">here</a>.</p>
   		</div>
   	</div>
 </section>
