--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 		         	<p class='interests'> <b> MIT Education: </b>
 		            <ul> 
-			            <li> Ph.D. Candidate in Operations Research, Expected 2024 </li>
+			            <li> Ph.D. in Operations Research, 2024 </li>
 				        <li> Bachelor of Science degree in Mathematics, 2019 </li>
 				        <li> Bachelor of Science degree in Computer Science, 2019 </li>
 				        <li> Minor in Statistics and Data Science, 2019 </li>
